Change some names and rearrange code